Generalised entity classes, so all will extend EntityChargedParticle. Also did same to entity renderers. Added antiProton as new Item and ThrownAntiProton as new entity, with new texture. Changed onUpdate (which is now only in EntityChargedParticle) to use Vector3 instead of Vec3, for increased functionality, and used [A Vector3].getVec3() to pass Vec3-s to minecraft methods that need them. Implemented basic acceleration of charged particles in static magnetic field, but it needs work.

--- a/src/main/resources/assets/test1/lang/en_UK.lang
+++ b/src/main/resources/assets/test1/lang/en_UK.lang
@@ -1,4 +1,5 @@
 # Item localizations
 item.test1:Proton.name=Proton
+item.test1:AntiProton.name=AntiProton
 tile.test1:Magnet.name=Magnet
 itemGroup.test1=First Test Mod
