--- a/src/main/resources/assets/test1/lang/en_US.lang
+++ b/src/main/resources/assets/test1/lang/en_US.lang
@@ -1,4 +1,5 @@
 # Item localizations
 item.test1:Proton.name=Proton
+item.test1:AntiProton.name=AntiProton
 tile.test1:Magnet.name=Magnet
 itemGroup.test1=First Test Mod
